--- a/index.html
+++ b/index.html
@@ -13,31 +13,33 @@
 <body>
 
     <header>
-        <div class="head">
-            <div class="signs">
-                <img src="./media/circ2.png" alt="">
-                <img src="./media/plus.png" alt="">
-                <div class="triangle">
-                    <p></p>
+        <main>
+            <div class="head">
+                <div class="signs">
+                    <img src="./media/circ2.png" alt="">
+                    <img src="./media/plus.png" alt="">
+                    <div class="triangle">
+                        <p></p>
+                    </div>
+                </div>
+
+                <div class="navlinks">
+                    <a href="#work">WORK</a>
+                    <a href="#about">ABOUT</a>
+                    <a href="#contact">CONTACT</a>
                 </div>
             </div>
-
-            <div class="navlinks">
-                <a href="#work">WORK</a>
-                <a href="#about">ABOUT</a>
-                <a href="#contact">CONTACT</a>
+            <div class="hello">
+                <h1>Hello, world</h1>
+                <p>I'm Chris Ota, a San Francisco-based product designer working at Lyft. I am passionate about
+                    researching
+                    problems and solving them through design while providing a pleasant user experience.</p>
+                <div class="email">
+                    <a href="resume">Resume</a><a href="email">Email</a>
+                </div>
             </div>
-        </div>
-        <div class="hello">
-            <h1>Hello, world</h1>
-            <p>I'm Chris Ota, a San Francisco-based product designer working at Lyft. I am passionate about
-                researching
-                problems and solving them through design while providing a pleasant user experience.</p>
-            <div class="email">
-                <a href="resume">Resume</a><a href="email">Email</a>
-            </div>
-        </div>
-        <div class="background"></div>
+            <div class="background"></div>
+        </main>
     </header>
     <main>
         <section id="work">
@@ -239,14 +241,16 @@
                     </div>
                 </div>
             </div>
-            <div class="clock">
-                <p class="head">Clock created with only HTML and CSS</p>
-                <footer class="footerinClock">
-                    <p>"Good design is long-lasting."</p>
-                    <p class="line"></p>
-                    <p>Dieter Rams</p>
-                </footer>
-            </div>
+    </main>
+    <div class="clock">
+        <p class="head">Clock created with only HTML and CSS</p>
+        <footer class="footerinClock">
+            <p>"Good design is long-lasting."</p>
+            <p class="line"></p>
+            <p>Dieter Rams</p>
+        </footer>
+    </div>
+    <main>
         </section>
 
 
@@ -264,35 +268,34 @@
                 <a href="Medium">Medium</a>
             </div>
 
-            <footer class="pagefooter">
-                <div class="mediumTwitter">
-                    <div class="mediumblogs">
-                        <h1>Medium Blogs</h1>
-                        <p>Favorites:</p>
-                        <div class="links">
-                            <a href="">How do I build a good mentor/mentee relationship?</a>
-                            <a href="">Streamlining performance reviews</a><a href="">Lessons For Aspiring Designers</a>
-                            <a href="">What Non-Designers Don’t Realize</a>
-                        </div>
-                    </div>
-                    <div class="twitter">
-                        <h1>Twitter</h1>
-                        <div class="links">
-                            <a href="">🫃 https://t.co/jedHzFffiK</a>
-                            <a href="">9 hours ago</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="tr">
-                    <div class="background2"></div>
-                </div>
-
-                <div class="last">Coded with ♥. Copyright © 2022 Chris Ota.</div>
-            </footer>
-
 
         </section>
     </main>
+    <footer class="pagefooter">
+        <div class="mediumTwitter">
+            <div class="mediumblogs">
+                <h1>Medium Blogs</h1>
+                <p>Favorites:</p>
+                <div class="links">
+                    <a href="">How do I build a good mentor/mentee relationship?</a>
+                    <a href="">Streamlining performance reviews</a><a href="">Lessons For Aspiring Designers</a>
+                    <a href="">What Non-Designers Don’t Realize</a>
+                </div>
+            </div>
+            <div class="twitter">
+                <h1>Twitter</h1>
+                <div class="links">
+                    <a href="">🫃 https://t.co/jedHzFffiK</a>
+                    <a href="">9 hours ago</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="last">Coded with ♥. Copyright © 2022 Chris Ota.</div>
+        <div class="background2"></div>
+    </footer>
+
+
 </body>
 
 <!-- https://www.otadesigns.com/ -->
