--- a/mallRedesign.html
+++ b/mallRedesign.html
@@ -11,22 +11,26 @@
 </head>
 
 <body>
-    <div class="head">
-        <div class="signs">
-            <a href="./index.html">
-                <img src="./media/bluecirc (1).png" alt="">
-                <img src="./media/blueplus.png" alt="">
-                <div class="triangle">
-                    <p></p>
-                </div>
-        </div></a>
+    <main class="posi">
+        <div class="head">
+            <div class="signs">
+                <a href="./index.html">
+                    <img src="./media/bluecirc (1).png" alt="">
+                    <img src="./media/blueplus.png" alt="">
+                    <div class="triangle">
+                        <p></p>
+                    </div>
 
-        <div class="navlinks">
-            <a href="./index.html#work">WORK</a>
-            <a href="./index.html#about">ABOUT</a>
-            <a href="./index.html#contact">CONTACT</a>
+            </div></a>
+
+            <div class="navlinks">
+                <a href="./index.html#work">WORK</a>
+                <a href="./index.html#about">ABOUT</a>
+                <a href="./index.html#contact">CONTACT</a>
+            </div>
         </div>
-    </div>
+    </main>
+
     <header>
 
         <div class="hello">
@@ -36,19 +40,22 @@
         </div>
         <div class="background"></div>
     </header>
-
-    <p class="ourclient">Our client wanted to improve on site usability for local, national, and international
-        visitors.
-        The focus of this project was to make the site more accessible via mobile to improve everyones shopping
-        experience.</p>
+    <main>
+        <p class="ourclient">Our client wanted to improve on site usability for local, national, and international
+            visitors.
+            The focus of this project was to make the site more accessible via mobile to improve everyones shopping
+            experience.</p>
+    </main>
     <section class="info">
-        <div class="mallshots">
-            <img src="./media/mall-shot-02.jpg" alt="">
-            <img src="./media/mall-shot-01.jpg" alt="">
-            <img src="./media/mall-shot-03.jpg" alt="">
-        </div>
-        <div class="textinfo">"This is the world's largest outdoor shopping center and Hawaii's premier shopping,
-            entertainment, and dining destination with 290 stores, including nearly 70 dining options."</div>
+        <main>
+            <div class="mallshots">
+                <img src="./media/mall-shot-02.jpg" alt="">
+                <img src="./media/mall-shot-01.jpg" alt="">
+                <img src="./media/mall-shot-03.jpg" alt="">
+            </div>
+            <div class="textinfo">"This is the world's largest outdoor shopping center and Hawaii's premier shopping,
+                entertainment, and dining destination with 290 stores, including nearly 70 dining options."</div>
+        </main>
     </section>
 
     <section class="research">
@@ -82,56 +89,63 @@
     </section>
 
     <section class="reviewstoreimg">
-        <div class="review">
-            <div class="reviewtext">
-                <h1>Heuristic Review</h1>
-                <p>Current Site</p>
-                <p>
-                    The website caters to a large audience, which include local, national, and international visitors.
-                    They
-                    offer a variety of promotions and events which are either store or mall specific. Below are some
-                    points
-                    we
-                    touched upon when comparing their web presence with other competitors:</p>
+        <main>
+            <div class="review">
+                <div class="reviewtext">
+                    <h1>Heuristic Review</h1>
+                    <p>Current Site</p>
+                    <p>
+                        The website caters to a large audience, which include local, national, and international
+                        visitors.
+                        They
+                        offer a variety of promotions and events which are either store or mall specific. Below are some
+                        points
+                        we
+                        touched upon when comparing their web presence with other competitors:</p>
+                </div>
+                <div class="empty"></div>
             </div>
-            <div class="empty"></div>
-        </div>
-        <div class="review">
-            <div class="reviewtext pros">
-                <h1>Pros</h1>
-                <ul>
-                    <li>The brand is represented well in the design with floral patterns, attractive photography, and
-                        use of curves.</li>
-                    <li>Each page has a different color scheme, which keeps the site lively and interesting.</li>
-                </ul>
-                <h1>Cons</h1>
-                <ul>
-                    <li>Home page slideshow images transition automatically with no controls.</li>
-                    <li>Mall hours are low on the page.</li>
-                    <li>Side navigation is hidden and dominated by other sections.</li>
-                    <li>Body content and headings have poor hierarchy. Headings, sub-headings, and body text can be
-                        treated differently so they don't blend in with each other.</li>
-                    <li>Although active on social media, the site does not represent this.</li>
-                </ul>
+            <div class="review">
+                <div class="reviewtext pros">
+                    <h1>Pros</h1>
+                    <ul>
+                        <li>The brand is represented well in the design with floral patterns, attractive photography,
+                            and
+                            use of curves.</li>
+                        <li>Each page has a different color scheme, which keeps the site lively and interesting.</li>
+                    </ul>
+                    <h1>Cons</h1>
+                    <ul>
+                        <li>Home page slideshow images transition automatically with no controls.</li>
+                        <li>Mall hours are low on the page.</li>
+                        <li>Side navigation is hidden and dominated by other sections.</li>
+                        <li>Body content and headings have poor hierarchy. Headings, sub-headings, and body text can be
+                            treated differently so they don't blend in with each other.</li>
+                        <li>Although active on social media, the site does not represent this.</li>
+                    </ul>
+                </div>
+                <div class="empty">
+                    <img src="./media/screen-blur-crop.png" alt="">
+                    <figcaption>Home Page, October 2015</figcaption>
+                </div>
             </div>
-            <div class="empty">
-                <img src="./media/screen-blur-crop.png" alt="">
-                <figcaption>Home Page, October 2015</figcaption>
-            </div>
-        </div>
 
-        <div class="proposed">
-            <h1>Proposed Redesign</h1>
-            <img src="./media/mall-home.png" alt="">
-            <figcaption>Proposed Home Page</figcaption>
-            <p>The proposed redesign was focused on (but not limited to) several things: Quick access to the directory
-                map, mall hours, dynamic imagery, and easy to find updates.</p>
-        </div>
+            <div class="proposed">
+                <h1>Proposed Redesign</h1>
+                <img src="./media/mall-home.png" alt="">
+                <figcaption>Proposed Home Page</figcaption>
+                <p>The proposed redesign was focused on (but not limited to) several things: Quick access to the
+                    directory
+                    map, mall hours, dynamic imagery, and easy to find updates.</p>
+            </div>
+        </main>
+
     </section>
 
 
     <section class="survey research">
         <div class="insight researchtexts">
+
             <h1>Customer Surveys</h1>
             <p>Insights</p>
             <p>Data from 800 shoppers were collected and we confirmed earlier assumptions about site visitors. Below are
@@ -164,35 +178,43 @@
         </div>
     </section>
     <section class="redesignsect">
-        <div class="proposed map">
-            <h1>Proposed Redesign</h1>
-            <img src="./media/mall-map.png" alt="">
-            <figcaption>Proposed Directory Page</figcaption>
-        </div>
-        <div class="review approach">
-            <div class="reviewtext">
-                <h1>Our Approach</h1>
-                <p>The website only offered a static map of shopping center. It was very tedious to update since there
-                    are multiple floors, hundreds of shops, and over a dozen restaurants. At the time, the mall was
-                    under construction and tenants were moving on a monthly basis which proved frustrating to visitors
-                    since maps weren't updated in a timely fashion.</p>
-                <p>
-                    We wanted to to integrate Google Maps for an interactive experience for any user using any type of
-                    device. Additionally, it would be easier for staff to update the map.</p>
-                <p>New and returning customers requested a detailed store page which highlights specials, specific store
-                    hours, amenities, featured brands, and other details. By providing more information, we all felt it
-                    would increase store traffic, especially if a store didn't have a personal website.</p>
+        <main>
+            <div class="proposed map">
+                <h1>Proposed Redesign</h1>
+                <img src="./media/mall-map.png" alt="">
+                <figcaption>Proposed Directory Page</figcaption>
             </div>
-            <div class="empty"></div>
-        </div>
+            <div class="review approach">
+                <div class="reviewtext">
+                    <h1>Our Approach</h1>
+                    <p>The website only offered a static map of shopping center. It was very tedious to update since
+                        there
+                        are multiple floors, hundreds of shops, and over a dozen restaurants. At the time, the mall was
+                        under construction and tenants were moving on a monthly basis which proved frustrating to
+                        visitors
+                        since maps weren't updated in a timely fashion.</p>
+                    <p>
+                        We wanted to to integrate Google Maps for an interactive experience for any user using any type
+                        of
+                        device. Additionally, it would be easier for staff to update the map.</p>
+                    <p>New and returning customers requested a detailed store page which highlights specials, specific
+                        store
+                        hours, amenities, featured brands, and other details. By providing more information, we all felt
+                        it
+                        would increase store traffic, especially if a store didn't have a personal website.</p>
+                </div>
+                <div class="empty"></div>
+            </div>
 
-        <div class="store proposed">
-            <img src="./media/mall-store.png" alt="">
-            <figcaption>Proposed Store Page</figcaption>
-        </div>
+            <div class="store proposed">
+                <img src="./media/mall-store.png" alt="">
+                <figcaption>Proposed Store Page</figcaption>
+            </div>
+        </main>
     </section>
 
     <section class="stakeholder survey research">
+
         <div class="insight researchtexts">
             <h1>Stakeholder Interviews</h1>
             <p>Experience and Motivations</p>
@@ -236,16 +258,19 @@
     </div>
 
     <div class="contribution">
-        <p>Project Contribution</p>
-        <p><strong>Agency</strong> Ikayzo, Inc.</p>
-        <p><strong>Engagement</strong> July - November 2014</p>
-        <p><strong>Design</strong> Mockups</p>
-        <p><strong>Discovery</strong> Touchpoints, Audits, Interviews, Sitemap, Userflows, Personas, Wireframes</p>
-        <p><strong>Implementation</strong> Wordpress</p>
-        <div class="links">
-            <a href="./index.html">Return Home</a>
-        </div>
+        <main>
+            <p>Project Contribution</p>
+            <p><strong>Agency</strong> Ikayzo, Inc.</p>
+            <p><strong>Engagement</strong> July - November 2014</p>
+            <p><strong>Design</strong> Mockups</p>
+            <p><strong>Discovery</strong> Touchpoints, Audits, Interviews, Sitemap, Userflows, Personas, Wireframes</p>
+            <p><strong>Implementation</strong> Wordpress</p>
+            <div class="links">
+                <a href="./index.html">Return Home</a>
+            </div>
     </div>
+    </main>
+
     <div class="coded">
         <p>Coded with ♥. Copyright © 2022 Chris Ota.</p>
     </div>
