--- a/schoolkine.html
+++ b/schoolkine.html
@@ -12,47 +12,55 @@
 </head>
 
 <body>
-    <div class="head">
-        <div class="signs">
-            <a href="./index.html">
-                <img src="./media/bluecirc (1).png" alt="">
-                <img src="./media/blueplus.png" alt="">
-                <div class="triangle">
-                    <p></p>
-                </div>
-        </div></a>
 
-        <div class="navlinks">
-            <a href="./index.html#work">WORK</a>
-            <a href="./index.html#about">ABOUT</a>
-            <a href="./index.html#contact">CONTACT</a>
+    <main class="posi">
+        <div class="head">
+            <div class="signs">
+                <a href="./index.html">
+                    <img src="./media/bluecirc (1).png" alt="">
+                    <img src="./media/blueplus.png" alt="">
+                    <div class="triangle">
+                        <p></p>
+                    </div>
+
+            </div></a>
+
+            <div class="navlinks">
+                <a href="./index.html#work">WORK</a>
+                <a href="./index.html#about">ABOUT</a>
+                <a href="./index.html#contact">CONTACT</a>
+            </div>
         </div>
-    </div>
+    </main>
     <header>
+        <main>
+            <div class="hello">
+                <h1>School Kine Cookies</h1>
+                <p>Homemade Since 1984</p>
 
-        <div class="hello">
-            <h1>School Kine Cookies</h1>
-            <p>Homemade Since 1984</p>
+            </div>
+            <div class="background"></div>
+        </main>
 
-        </div>
-        <div class="background"></div>
     </header>
-    <p class="ourclient">To better serve their customers, School Kine Cookies needed a backend dashboard for
-        administrators to track fundraiser cookie sales to increase productivity.</p>
-
+    <main>
+        <p class="ourclient">To better serve their customers, School Kine Cookies needed a backend dashboard for
+            administrators to track fundraiser cookie sales to increase productivity.</p>
+    </main>
     <section class="info">
-        <div class="mallshots">
-            <img src="./media/skc-cookie-01.jpg" alt="">
-            <img src="./media/skc-cookie-03.jpg" alt="">
-            <img src="./media/skc-cookie-02.jpg" alt="">
-        </div>
-        <div class="textinfo">"School Kine Cookies is looking to increase administrative efficiency, customer
-            acquisition, and brand awareness via an outstanding user and administrative experience."
-        </div>
-        <div class="cookieslogo">
-            <img src="./media/school-kine-cookies-logo.svg" alt="">
-        </div>
-
+        <main>
+            <div class="mallshots">
+                <img src="./media/skc-cookie-01.jpg" alt="">
+                <img src="./media/skc-cookie-03.jpg" alt="">
+                <img src="./media/skc-cookie-02.jpg" alt="">
+            </div>
+            <div class="textinfo">"School Kine Cookies is looking to increase administrative efficiency, customer
+                acquisition, and brand awareness via an outstanding user and administrative experience."
+            </div>
+            <div class="cookieslogo">
+                <img src="./media/school-kine-cookies-logo.svg" alt="">
+            </div>
+        </main>
     </section>
 
 
@@ -152,23 +160,26 @@
 
 
     <div class="contribution">
-        <p>Project Contribution</p>
-        <p><strong>Client</strong> School Kine Cookies</p>
-        <p><strong>Site</strong><a href="http://www.schoolkineonline.com/" target="_blank"> schoolkineonline.com</a></p>
-        <p><strong>Agency</strong> Ikayzo, Inc</p>
-        <p><strong>Engagement</strong> March - July 2014</p>
-        <p><strong>Discovery</strong> Site Map, Userflows, Personas, Wireframes</p>
-        <p><strong>Design</strong> Mockups</p>
-        <p>
-            <strong>Implementation</strong>HTML, CSS, Foundation, Ruby on Rails, Shopify
-        </p>
-        <div class="links">
-            <a href="./index.html">Return Home</a>
-        </div>
+        <main>
+            <p>Project Contribution</p>
+            <p><strong>Client</strong> School Kine Cookies</p>
+            <p><strong>Site</strong><a href="http://www.schoolkineonline.com/" target="_blank"> schoolkineonline.com</a>
+            </p>
+            <p><strong>Agency</strong> Ikayzo, Inc</p>
+            <p><strong>Engagement</strong> March - July 2014</p>
+            <p><strong>Discovery</strong> Site Map, Userflows, Personas, Wireframes</p>
+            <p><strong>Design</strong> Mockups</p>
+            <p>
+                <strong>Implementation</strong>HTML, CSS, Foundation, Ruby on Rails, Shopify
+            </p>
+            <div class="links">
+                <a href="./index.html">Return Home</a>
+            </div>
     </div>
     <div class="coded">
         <p>Coded with ♥. Copyright © 2022 Chris Ota.</p>
     </div>
+    </main>
 </body>
 
 </html>
