--- a/clearstream.html
+++ b/clearstream.html
@@ -13,51 +13,63 @@
 </head>
 
 <body>
-    <div class="head">
-        <div class="signs">
-            <a href="./index.html">
-                <img src="./media/bluecirc (1).png" alt="">
-                <img src="./media/blueplus.png" alt="">
-                <div class="triangle">
-                    <p></p>
-                </div>
-        </div></a>
 
-        <div class="navlinks">
-            <a href="./index.html#work">WORK</a>
-            <a href="./index.html#about">ABOUT</a>
-            <a href="./index.html#contact">CONTACT</a>
+    <main class="posi">
+        <div class="head">
+            <div class="signs">
+                <a href="./index.html">
+                    <img src="./media/bluecirc (1).png" alt="">
+                    <img src="./media/blueplus.png" alt="">
+                    <div class="triangle">
+                        <p></p>
+                    </div>
+
+            </div></a>
+
+            <div class="navlinks">
+                <a href="./index.html#work">WORK</a>
+                <a href="./index.html#about">ABOUT</a>
+                <a href="./index.html#contact">CONTACT</a>
+            </div>
         </div>
-    </div>
+    </main>
+
     <header>
+        <main>
+            <div class="hello">
+                <h1>Clearstream</h1>
+                <p>Innovative Ad Solutions</p>
 
-        <div class="hello">
-            <h1>Clearstream</h1>
-            <p>Innovative Ad Solutions</p>
+            </div>
+            <div class="background"></div>
+        </main>
 
-        </div>
-        <div class="background"></div>
     </header>
-    <p class="ourclient">Clearstream, a forward-thinking video ad platform company, needed a solution to manage
-        campaigns with reporting dashboards. The app we built helped account managers optimize toward custom KPIs for
-        Fortune 500 companies.</p>
+    <main>
+        <p class="ourclient">Clearstream, a forward-thinking video ad platform company, needed a solution to manage
+            campaigns with reporting dashboards. The app we built helped account managers optimize toward custom KPIs
+            for
+            Fortune 500 companies.</p>
+    </main>
 
 
     <section class="info">
-        <div class="mallshots">
-            <img src="./media/logo-bp1.jpg" alt="">
-            <img src="./media/logo-bp2.jpg" alt="">
-            <img src="./media/logo-bp3.jpg" alt="">
-            <img src="./media/logo-bp4.jpg" alt="">
-            <img src="./media/logo-bp5.jpg" alt="">
-            <img src="./media/logo-bp6.jpg" alt="">
-        </div>
-        <div class="textinfo">"Our goal is to equip advertisers with a well-rounded look at the video content they
-            purchase by going beyond page level and metadata and journeying into the actual video stream."
-        </div>
-        <div class="cookieslogo">
-            <img src="./media/clearstream-logo.png" alt="">
-        </div>
+        <main>
+            <div class="mallshots">
+                <img src="./media/logo-bp1.jpg" alt="">
+                <img src="./media/logo-bp2.jpg" alt="">
+                <img src="./media/logo-bp3.jpg" alt="">
+                <img src="./media/logo-bp4.jpg" alt="">
+                <img src="./media/logo-bp5.jpg" alt="">
+                <img src="./media/logo-bp6.jpg" alt="">
+            </div>
+            <div class="textinfo">"Our goal is to equip advertisers with a well-rounded look at the video content they
+                purchase by going beyond page level and metadata and journeying into the actual video stream."
+            </div>
+            <div class="cookieslogo">
+                <img src="./media/clearstream-logo.png" alt="">
+            </div>
+        </main>
 
     </section>
 
@@ -77,6 +89,8 @@
         <img src="./media/CS-style-b.jpg" alt="">
         <img src="./media/CS-style-c.jpg" alt="">
     </div>
+
+
     <section class="reviewstoreimg">
         <div class="review">
             <div class="reviewtext">
@@ -92,6 +106,7 @@
             <figcaption>Main View: Active Campaigns</figcaption>
         </div>
     </section>
+
     <div class="camph1">
         <h1>Campaign Creation Process</h1>
         <div class="campaign">
@@ -162,23 +177,26 @@
     </div>
 
     <div class="contribution">
-        <p>Project Contribution</p>
-        <p><strong>Client</strong> Clearstream</p>
-        <p><strong>Site</strong><a href="http://www.clearstream.tv/" target="_blank"> Clearstream.tv</a></p>
-        <p><strong>Agency</strong> Ikayzo, Inc</p>
-        <p><strong>Engagement</strong> June - August 2014</p>
-        <p><strong>Design</strong> Mockups</p>
-        <p><strong>Design</strong> Mockups</p>
-        <p>
-            <strong>Implementation</strong> HTML, CSS, Ruby on Rails
-        </p>
-        <div class="links">
-            <a href="./index.html">Return Home</a>
-        </div>
+        <main>
+            <p>Project Contribution</p>
+            <p><strong>Client</strong> Clearstream</p>
+            <p><strong>Site</strong><a href="http://www.clearstream.tv/" target="_blank"> Clearstream.tv</a></p>
+            <p><strong>Agency</strong> Ikayzo, Inc</p>
+            <p><strong>Engagement</strong> June - August 2014</p>
+            <p><strong>Design</strong> Mockups</p>
+            <p><strong>Design</strong> Mockups</p>
+            <p>
+                <strong>Implementation</strong> HTML, CSS, Ruby on Rails
+            </p>
+            <div class="links">
+                <a href="./index.html">Return Home</a>
+            </div>
     </div>
     <div class="coded">
         <p>Coded with ♥. Copyright © 2022 Chris Ota.</p>
     </div>
+    </main>
+
 </body>
 
 </html>
