--- a/codepen.html
+++ b/codepen.html
@@ -12,20 +12,22 @@
 <body>
     <div class="wrapper">
         <header>
-            <a href="./index.html">
-                <div class="signs">
-                    <img src="./media/bluecirc (1).png" alt="">
-                    <img src="./media/blueplus.png" alt="">
-                    <div class="triangle">
-                        <p></p>
+            <div class="header"> <a href="./index.html">
+                    <div class="signs">
+                        <img src="./media/bluecirc (1).png" alt="">
+                        <img src="./media/blueplus.png" alt="">
+                        <div class="triangle">
+                            <p></p>
+                        </div>
                     </div>
+                </a>
+                <div class="navlinks">
+                    <a href="./index.html#work">WORK</a>
+                    <a href="./index.html#about">ABOUT</a>
+                    <a href="./index.html#contact">CONTACT</a>
                 </div>
-            </a>
-            <div class="navlinks">
-                <a href="./index.html#work">WORK</a>
-                <a href="./index.html#about">ABOUT</a>
-                <a href="./index.html#contact">CONTACT</a>
             </div>
+
         </header>
 
 
@@ -49,54 +51,57 @@
                         Most of these render properly in the latest version of Google Chrome only.</p>
                 </div>
             </div>
-            <section class="pics">
-                <div class="first">
-                    <figcaption>Single Element Icons</figcaption>
-                    <a href="https://codepen.io/chrisota/pen/pwAvf" target="_blank"><img src="./media/codepenpics1.png"
-                            alt=""></a>
-                </div>
-                <!--  -->
-                <div class="first">
-                    <figcaption>Single Element Icons</figcaption>
-                    <a href="https://codepen.io/chrisota/pen/QbrBbW" target="_blank"><img src="./media/codepenpics2.png"
-                            alt=""></a>
-                </div>
-                <!--  -->
-                <div class="first">
-                    <figcaption>Single Element Icons</figcaption>
-                    <a href="https://codepen.io/chrisota/pen/ravOVX" target="_blank"><img src="./media/codepenpics3.png"
-                            alt=""></a>
-                </div>
-                <!--  -->
-                <div class="first">
-                    <figcaption>Single Element Icons</figcaption>
-                    <a href="https://codepen.io/chrisota/pen/bNdRaM" target="_blank"><img src="./media/codepenpics4.png"
-                            alt=""></a>
-                </div>
-                <!--  -->
-                <div class="first">
-                    <figcaption>Single Element Icons</figcaption>
-                    <a href="https://codepen.io/chrisota/pen/emVzPW" target="_blank"><img src="./media/codepenpics5.png"
-                            alt=""></a>
-                </div>
-                <!--  -->
-                <div class="first">
-                    <figcaption>Single Element Icons</figcaption>
-                    <a href="https://codepen.io/chrisota/pen/Abnzl" target="_blank"><img src="./media/codepenpics6.png"
-                            alt=""></a>
-                </div>
-                <!--  -->
-                <div class="first">
-                    <figcaption>Single Element Icons</figcaption>
-                    <a href="https://codepen.io/chrisota/pen/jbuxz" target="_blank"><img src="./media/codepenpics7.png"
-                            alt=""></a>
-                </div>
-                <!--  -->
-                <div class="first">
-                    <figcaption>Single Element Icons</figcaption>
-                    <a href="https://codepen.io/chrisota/pen/hkAFm" target="_blank"><img src="./media/codepenpics8.png"
-                            alt=""></a>
-                </div>
+            <aside>
+                <section class="pics">
+
+                    <div class="first">
+                        <figcaption>Single Element Icons</figcaption>
+                        <a href="https://codepen.io/chrisota/pen/pwAvf" target="_blank"><img
+                                src="./media/codepenpics1.png" alt=""></a>
+                    </div>
+                    <!--  -->
+                    <div class="first">
+                        <figcaption>Single Element Icons</figcaption>
+                        <a href="https://codepen.io/chrisota/pen/QbrBbW" target="_blank"><img
+                                src="./media/codepenpics2.png" alt=""></a>
+                    </div>
+                    <!--  -->
+                    <div class="first">
+                        <figcaption>Single Element Icons</figcaption>
+                        <a href="https://codepen.io/chrisota/pen/ravOVX" target="_blank"><img
+                                src="./media/codepenpics3.png" alt=""></a>
+                    </div>
+                    <!--  -->
+                    <div class="first">
+                        <figcaption>Single Element Icons</figcaption>
+                        <a href="https://codepen.io/chrisota/pen/bNdRaM" target="_blank"><img
+                                src="./media/codepenpics4.png" alt=""></a>
+                    </div>
+                    <!--  -->
+                    <div class="first">
+                        <figcaption>Single Element Icons</figcaption>
+                        <a href="https://codepen.io/chrisota/pen/emVzPW" target="_blank"><img
+                                src="./media/codepenpics5.png" alt=""></a>
+                    </div>
+                    <!--  -->
+                    <div class="first">
+                        <figcaption>Single Element Icons</figcaption>
+                        <a href="https://codepen.io/chrisota/pen/Abnzl" target="_blank"><img
+                                src="./media/codepenpics6.png" alt=""></a>
+                    </div>
+                    <!--  -->
+                    <div class="first">
+                        <figcaption>Single Element Icons</figcaption>
+                        <a href="https://codepen.io/chrisota/pen/jbuxz" target="_blank"><img
+                                src="./media/codepenpics7.png" alt=""></a>
+                    </div>
+                    <!--  -->
+                    <div class="first">
+                        <figcaption>Single Element Icons</figcaption>
+                        <a href="https://codepen.io/chrisota/pen/hkAFm" target="_blank"><img
+                                src="./media/codepenpics8.png" alt=""></a>
+                    </div>
+            </aside>
             </section>
 
             <section class="responsive">
@@ -117,10 +122,11 @@
                     <a href="./index.html">Return Home</a>
                 </div>
             </section>
+            <footer>Coded with ♥. Copyright © 2022 Chris Ota.</footer>
         </main>
 
     </div>
-    <footer>Coded with ♥. Copyright © 2022 Chris Ota.</footer>
+
 </body>
 
 </html>
