--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
 
     <header>
         <main>
-            <div class="head">
-                <div class="signs">
-                    <img src="./media/circ2.png" alt="">
-                    <img src="./media/plus.png" alt="">
-                    <div class="triangle">
-                        <p></p>
+            <div class="ty">
+                <div class="head">
+                    <div class="signs">
+                        <img src="./media/circ2.png" alt="">
+                        <img src="./media/plus.png" alt="">
+                        <div class="triangle">
+                            <p></p>
+                        </div>
                     </div>
-                </div>
 
-                <div class="navlinks">
-                    <a href="#work">WORK</a>
-                    <a href="#about">ABOUT</a>
-                    <a href="#contact">CONTACT</a>
+                    <div class="navlinks">
+                        <a href="#work">WORK</a>
+                        <a href="#about">ABOUT</a>
+                        <a href="#contact">CONTACT</a>
+                    </div>
                 </div>
             </div>
             <div class="hello">
