--- a/mallRedesign.html
+++ b/mallRedesign.html
@@ -32,13 +32,14 @@
     </main>
 
     <header>
+        <main>
+            <div class="hello">
+                <h1>Mall Redesign</h1>
+                <p>Brand & User Research</p>
 
-        <div class="hello">
-            <h1>Mall Redesign</h1>
-            <p>Brand & User Research</p>
-
-        </div>
-        <div class="background"></div>
+            </div>
+            <div class="background"></div>
+        </main>
     </header>
     <main>
         <p class="ourclient">Our client wanted to improve on site usability for local, national, and international
