--- a/index.html
+++ b/index.html
@@ -336,9 +336,9 @@
         <!-- clock ends here -->
 
         <footer class="footerinClock">
-            <p>"Good design is long-lasting."</p>
+            <p class="footerp">"Good design is long-lasting."</p>
             <p class="line"></p>
-            <p>Dieter Rams</p>
+            <p class="footerp">Dieter Rams</p>
         </footer>
     </div>
     <main>
